# Gnome-Pie

./: .gitignore  .valencia  AUTHORS  CMakeLists.txt  CMake_Uninstall.cmake.in  COPYING  INSTALL  Makefile  README  README.md  TRANSLATING  gnome-pie  gnome-pie.sublime-project  gnome-pie.sublime-workspace  make.sh  make_deb.sh  pies.conf  update_copy_notice.sh
.github/workflows/: build.yml
cmake/vala/: FindVala.cmake  ValaPrecompile.cmake
debian/: control
locale/: gnomepie.pot
locale/de/LC_MESSAGES/: de.po
locales/: gnomepie.pot
locales/de_DE/LC_MESSAGES/: de.po  de_DE.po  gnomepie.mo
resources/: gnome-pie.1  gnome-pie.desktop  pies.conf.default
resources/gui/: icon_select.ui  rename_pie.ui  settings.ui  slice_select.ui  theme_select.ui  trigger_select.ui
resources/locale/: TRANSLATING  compile-po.sh  gen-po.sh  gen-pot.sh  gnomepie.pot  update-po.sh  zanata.xml
resources/locale/bg/LC_MESSAGES/: bg.po  gnomepie.mo
resources/locale/de/LC_MESSAGES/: de.po  gnomepie.mo
resources/locale/es/LC_MESSAGES/: es.po  es.po~  gnomepie.mo
resources/locale/fr/LC_MESSAGES/: fr.po  gnomepie.mo
resources/locale/it/LC_MESSAGES/: gnomepie.mo  it.po
resources/locale/ko/LC_MESSAGES/: gnomepie.mo  ko.po
resources/locale/lt/LC_MESSAGES/: gnomepie.mo  lt.po
resources/locale/nl_NL/LC_MESSAGES/: nl_NL.mo  nl_NL.po
resources/locale/pl/LC_MESSAGES/: pl.po
resources/locale/pt-br/LC_MESSAGES/: gnomepie.mo  pt-br.mo  pt-br.po
resources/locale/pt_BR/LC_MESSAGES/: gnomepie.mo  pt_BR.po
resources/locale/ru/LC_MESSAGES/: gnomepie.mo  ru.po
resources/themes/adwaita/: theme.xml
resources/themes/adwaita_big/: theme.xml
resources/themes/bright/: theme.xml
resources/themes/elementary/: theme.xml
resources/themes/funky/: theme.xml
resources/themes/gloss/: theme.xml
resources/themes/minimalistic_text/: theme.xml
resources/themes/numix/: theme.xml
resources/themes/o-pie/: theme.xml
resources/themes/simple/: theme.xml
resources/themes/simple_clock/: theme.xml
resources/themes/slim/: theme.xml
resources/themes/space_clock/: theme.xml
resources/themes/unity/: theme.xml
resources/ui/: appearance.ui  icon_select.ui  pie_options.ui  preferences.ui  rename_pie.ui  settings.ui  slice_select.ui  trigger_select.ui
src/: CMakeLists.txt  Deamon.vala  Test.vala  about.vala  action.vala  appAction.vala  bindingManager.vala  bookmarksPlugin.vala  center.vala  color.vala  compositedWindow.vala  daemon.vala  deamon.vala  drawable.vala  gnome-pie-gdk-backends.vala  iconLoader.vala  image.vala  indicator.vala  key.vala  keyAction.vala  keybindings.vala  main.vala  menuPlugin.vala  pie.vala  pieAction.vala  pieWindow.vala  preferences.vala  ring.vala  ringWindow.vala  settings.vala  slice.vala  theme.vala  themeHelpers.vala  themeList.vala  utils.vala  window.vala  windowUtils.vala
src/actionGroups/: actionGroup.vala  bookmarkGroup.vala  clipboardGroup.vala  customGroup.vala  devicesGroup.vala  groupRegistry.vala  menuGroup.vala  recentGroup.vala  sessionGroup.vala  subMenuGroup.vala  windowListGroup.vala  workspaceWindowListGroup.vala
src/action_groups/: ActionGroup.vala  ActionGroupRegistry.vala  BookmarkGroup.vala  DevicesGroup.vala  MenuGroup.vala  SessionGroup.vala  WindowListGroup.vala
src/actions/: Action.vala  ActionRegistry.vala  AppAction.vala  KeyAction.vala  MenuAction.vala  PieAction.vala  SigAction.vala  UriAction.vala  action.vala  actionRegistry.vala  appAction.vala  keyAction.vala  pieAction.vala  sigAction.vala  uriAction.vala
src/dbus/: OpenPie.vala  Serializer.vala
src/gui/: about.vala  aboutWindow.vala  appearanceWindow.vala  cellRendererIcon.vala  cellRendererMorph.vala  cellRendererTrigger.vala  commandComboList.vala  hotkeySelectButton.vala  iconChooserWindow.vala  iconSelectWindow.vala  indicator.vala  newSliceWindow.vala  newsWindow.vala  pieComboList.vala  pieList.vala  pieOptionsWindow.vala  piePreview.vala  piePreviewAddSign.vala  piePreviewCenter.vala  piePreviewDeleteSign.vala  piePreviewRenderer.vala  piePreviewSliceRenderer.vala  pieSettings.vala  preferences.vala  preferencesWindow.vala  renameWindow.vala  settingsWindow.vala  slicePreviewRenderer.vala  sliceTypeList.vala  themeList.vala  tipViewer.vala  triggerSelectButton.vala  triggerSelectWindow.vala
src/images/: Icon.vala  Image.vala  icon.vala  image.vala  renderedText.vala  themedIcon.vala
src/menus/: DefaultConfig.vala  Load.vala  Pie.vala  PieManager.vala  Save.vala
src/pie/: center.vala  pie.vala  pieLoader.vala  pieManager.vala  pieParser.vala  slice.vala  window.vala
src/pies/: defaultConfig.vala  load.vala  pie.vala  pieLoader.vala  pieManager.vala  pieSaver.vala  save.vala
src/plugins/: bookmarksPlugin.vala  menuPlugin.vala  recentPlugin.vala
src/renderer/: centerRenderer.vala  sliceRenderer.vala
src/renderers/: centerRenderer.vala  piePreviewRenderer.vala  pieRenderer.vala  pieWindow.vala  slicePreviewRenderer.vala  sliceRenderer.vala  window.vala
src/settings/: about.vala  cellRendererIcon.vala  cellRendererMorph.vala  iconChooserWindow.vala  indicator.vala  pieList.vala  preferences.vala  themeList.vala
src/system/: animatedValue.vala  bindingManager.vala  color.vala  config.vala  image.vala  key.vala  logger.vala  paths.vala  renderedText.vala  settings.vala
src/theme/: centerLayer.vala  sliceLayer.vala
src/themes/: centerLayer.vala  sliceLayer.vala  theme.vala  themeHelpers.vala  themeImporter.vala  themeList.vala
src/utilities/: BindingManager.vala  Icon.vala  Key.vala  Logger.vala  Paths.vala  Trigger.vala  animatedValue.vala  archiveReader.vala  archiveWriter.vala  bindingManager.vala  color.vala  config.vala  focusGrabber.vala  icon.vala  image.vala  key.vala  logger.vala  paths.vala  renderedText.vala  themedIcon.vala  trigger.vala
themes/adwaita/: theme.xml
themes/bright/: theme.xml
themes/funky/: theme.xml
themes/gloss/: theme.xml
themes/o-pie/: theme.xml
themes/slim/: theme.xml
themes/unity/: theme.xml
vapi/: appindicator-0.1.vapi  gee-1.0.vapi  libbamf3.vapi  libgnome-menu-3.0.vapi  x11.vapi  xtst.vapi
(+2 files in other folders)
